<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2012, 2026 Lablicate GmbH. All rights reserved. This program
	and the accompanying materials are made available under the terms of the
	Eclipse Public License v1.0 which accompanies this distribution, and is available
	at http://www.eclipse.org/legal/epl-v10.html
	Contributors: Dr. Philip Wenig - created the pom to build the plug-ins -->
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.chemclipse</groupId>
	<artifactId>master</artifactId>
	<version>0.9.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<!-- versions for plugins to use -->
		<tycho.version>5.0.3</tycho.version>
		<tycho.scmUrl>scm:git:https://github.com/eclipse-chemclipse/chemclipse</tycho.scmUrl>
		<maven-install-plugin.version>3.1.4</maven-install-plugin.version>
		<cbi-version>1.5.7</cbi-version>
		<!-- definition of the target to use -->
		<tycho.target>org.eclipse.chemclipse.targetplatform</tycho.target>
		<!-- other settings -->
		<tycho.groupid>org.eclipse.tycho</tycho.groupid>
		<maven.groupid>org.apache.maven.plugins</maven.groupid>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<skip.install>true</skip.install>
		<!-- about dialog -->
		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
		<buildTimestamp>${maven.build.timestamp}</buildTimestamp>
		<buildId>${buildTimestamp}</buildId>
		<releaseName>0.9.0</releaseName>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<maven.compiler.failOnWarning>true</maven.compiler.failOnWarning>
	</properties>
	<developers>
		<developer>
			<id>eselmeister</id>
			<name>Philip Wenig</name>
			<email>philip.wenig [at] openchrom.net</email>
			<timezone>+1</timezone>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>
	<build>
		<!-- PLUGINS -->
		<plugins>
			<plugin>
				<groupId>${tycho.groupid}</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
				    <additionalFileSets>
						<fileSet>
							<directory>${project.build.directory}</directory>
							<includes>
								<include>about.mappings</include>
							</includes>
						</fileSet>
					</additionalFileSets>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
					<sourceReferences>
						<generate>true</generate>
					</sourceReferences>
				</configuration>
				<dependencies>
				  <dependency>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-sourceref-jgit</artifactId>
					<version>${tycho.version}</version>
				  </dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>${tycho.groupid}</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>${tycho.groupid}</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<target>
						<file>${maven.multiModuleProjectDirectory}/releng/${tycho.target}/${tycho.target}.target</file>
					</target>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>${tycho.groupid}</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>${tycho.groupid}</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<excludes>
						<exclude>**/*TestCase.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>${maven.groupid}</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>${maven-install-plugin.version}</version>
				<configuration>
					<skip>${skip.install}</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>process-about.mappings</id>
						<phase>prepare-package</phase>
						<configuration>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<changeDetection>always</changeDetection>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<includes>
										<include>about.mappings</include>
									</includes>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
						<goals>
							<goal>copy-resources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<formats>
							<linux>tar.gz</linux>
							<macosx>tar.gz</macosx>
						</formats>
						<storeCreationTime>false</storeCreationTime>
						<products>
							<product>
								<rootFolders>
									<macosx>ChemClipse.app</macosx>
								</rootFolders>
								<archiveFileName>chemclipse</archiveFileName>
							</product>
						</products>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<includeAllDependencies>true</includeAllDependencies>
						<skipArchive>true</skipArchive>
					</configuration>
				</plugin>
				 <plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-document-bundle-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-jarsigner-plugin</artifactId>
					<version>${cbi-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-winsigner-plugin</artifactId>
					<version>${cbi-version}</version>
					<configuration>
					<fileNames>
						<fileName>chemclipse.exe</fileName>
						<fileName>chemclipsec.exe</fileName>
					</fileNames>
				</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-macsigner-plugin</artifactId>
					<version>${cbi-version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.6.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-p2-director-plugin</artifactId>
						<executions>
							<execution>
								<id>materialize-products</id>
								<goals>
									<goal>materialize-products</goal>
								</goals>
								<phase>none</phase>
							</execution>
							<execution>
								<id>archive-products</id>
								<phase>none</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>javadoc</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<source>25</source>
									<failOnError>true</failOnError>
									<legacyMode>true</legacyMode>
									<doclint>accessibility,html,reference,syntax</doclint>
									<additionalDependencies>
										<additionalDependency>
											<groupId>org.osgi</groupId>
											<artifactId>org.osgi.service.component.annotations</artifactId>
											<version>1.5.1</version>
										</additionalDependency>
										<dependency>
											<groupId>org.eclipse.pde</groupId>
											<artifactId>org.eclipse.pde.api.tools.annotations</artifactId>
											<version>1.4.0</version>
										</dependency>
									</additionalDependencies>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>eclipse-sign</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.cbi.maven.plugins</groupId>
						<artifactId>eclipse-jarsigner-plugin</artifactId>
						<version>${cbi-version}</version>
						<executions>
							<execution>
								<id>sign</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>eclipse</id>
			<url>https://repo.eclipse.org/content/groups/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<modules>
		<module>plugins</module>
		<module>tests</module>
		<module>features</module>
		<module>sites</module>
		<module>products</module>
	</modules>
</project>
